# bacon_ipsum

./: README.md  bacon_ipsum.py  pyproject.toml  test_bacon_ipsum.py
