[tool.poetry]
name = "assignments"
version = "0.1.0"
description = ""
authors = ["nikitashinde21, <nikita.r.shinde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
